--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="title">Platzhalter Titel</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">Navilink Name A</a></li>
                         <li><a href="#">nav ul li a</a></li>
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
