--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h1 class="title">Platzhalter Titel</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Navilink Name A</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Kontakt</a></li>
                     </ul>
                 </nav>
             </header>
