--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
-    <body style="background:black">
+    <body style="background:pink">
 
         <div class="header-container">
             <header class="wrapper clearfix">
